# unique-function

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  test.yml
examples/: Makefile
examples/src/: onetime_function_examples.cpp  unique_function_examples.cpp
include/komori/: onetime_function.hpp  unique_function.hpp
test/: onetime_function_test.cpp  unique_function_test.cpp
